# advena

./: LICENSE  README.md  mise.toml  renovate.json  vs.code-workspace
.github/workflows/: build.yaml  build_and_push.yaml  format.yml  format_pr.yaml  lint.yml  test.yaml
backend/genai/: .dockerignore  .env  .env.dev  .env.develop  .env.development  .env.prd  .env.production  .gitignore  Dockerfile  Dockerfile.dev  Dockerfile.development  Dockerfile.prd  Dockerfile.production  README.md  hello.py  pyproject.toml
backend/genai/event_sourcing/: context.py  log.py  result.py
backend/genai/event_sourcing/commands/: README.md
backend/genai/src/: constants.py  feed.py  keyword.py  main.py  oai_pmh.py  types.py  utils.py
backend/genai/src/async_task/: google.py
backend/genai/src/blob/: storage.py
backend/genai/src/book/: book.py  feed.py  keyword.py  oai_pmh.py
backend/genai/src/database/: cloudevents.py  firestore.py
backend/genai/src/event_sourcing/: result.py  utils.py  workflows.py
backend/genai/src/event_sourcing/entity/: README.md  radio_show.py  user.py  user_keyword.py
backend/genai/src/event_sourcing/events/: README.md
backend/genai/src/llm/: agent.py  config.py
backend/genai/src/llm/ng_word/: __init__.py  subset.py
backend/genai/src/logger/: logger.py
backend/genai/src/tts/: google.py
backend/genai/tests/: conftest.py  test_blob_storage.py  test_book_feed.py  test_book_keyword.py  test_entity_radio_show.py  test_entity_user.py  test_entity_user_keyword.py  test_firestore.py  test_keyword.py  test_llm_agent.py  test_main.py  test_storage.py  test_tts_google.py
backend/genai/tests/event_sourcing/: test_workflow.py
docs/: zenn-article.md
frontend/web/: .dockerignore  .env  .env.dev  .env.develop  .env.development  .env.example  .env.prd  .env.production  .eslintrc.json  .firebaserc  .gitignore  Dockerfile  Dockerfile.dev  Dockerfile.development  Dockerfile.prd  Dockerfile.production  README.md  auth.config.ts  auth.ts  biome.jsonc  cloudbuild.yaml  components.json  cors.json  firestore.indexes.json  firestore.rules  middleware.ts  next.config.ts  package.json  pnpm-lock.yaml  remoteconfig.template.json  storage.rules  tailwind.config.ts  vitest.config.ts
frontend/web/app/: globals.css  layout.tsx
frontend/web/app/(agent)/: layout.tsx  page.tsx
frontend/web/app/(auth)/: auth.config.ts  auth.ts
frontend/web/app/(auth)/api/auth/[...nextauth]/: route.ts
frontend/web/app/(auth)/login/: page.tsx
frontend/web/app/(auth)/register/: page.tsx
frontend/web/app/(auth)/terms/: page.tsx
frontend/web/app/(chat)/: actions.ts  layout.tsx  page.tsx
frontend/web/app/(chat)/api/chat/: route.ts
frontend/web/app/(chat)/api/document/: route.ts
frontend/web/app/(chat)/api/files/upload/: route.ts
frontend/web/app/(chat)/api/suggestions/: route.ts
frontend/web/app/(chat)/chat/[id]/: page.tsx
frontend/web/app/agent/: layout.tsx  page.tsx
frontend/web/components/: app-sidebar.tsx  block-actions.tsx  block-messages.tsx  block.tsx  chat-header.tsx  chat.tsx  console.tsx  data-stream-handler.tsx  document-preview.tsx  editor.tsx  google-auth-button.tsx  message-actions.tsx  message-editor.tsx  message.tsx  messages.tsx  multimodal-input.tsx  sidebar-history.tsx  sidebar-user-nav.tsx  sign-out-form.tsx  toolbar.tsx
frontend/web/components/isometric/: FrogIcon.tsx  IsometricBackground.tsx  IsometricCamera.tsx  IsometricFrogger.module.css  IsometricFrogger.tsx  IsometricPlayer.tsx  IsometricWorld.module.css  IsometricWorld.tsx  Tile.tsx  isometric.module.css  keyInput.ts  logic.ts  tileset.ts  touchInput.ts  utils.ts
frontend/web/components/shelf/: BookCover.tsx  Bookshelf.tsx  RotatingBookshelf.tsx  book.ts  shelf.module.css
frontend/web/components/visualizer/: BgmController.tsx  BooksDisplayModal.tsx  LedVisualizer.tsx  RadioController.tsx  ScriptDisplay.tsx  ScriptDisplayModal.tsx  audio-context-provider.tsx
frontend/web/hooks/: use-google-auth.ts  use-ref-loop.ts
frontend/web/lib/: state.ts  utils.ts  zod.ts
frontend/web/lib/ai/: index.ts  models.ts
frontend/web/lib/db/: migrate.ts  queries.ts  schema.ts
frontend/web/lib/editor/: functions.tsx
frontend/web/lib/firebase/: admin.ts  client.ts
frontend/web/lib/firestore/: admin-db.ts  admin.ts  client-db.ts  client.ts  firestore.ts  types.ts
frontend/web/lib/firestore/cloudevents/: cloudevents.ts
frontend/web/public/assets/bgm/: README.md
frontend/web/public/assets/city_game_tileset/: README.md
frontend/web/tests/: setup.ts
frontend/web/tests/hooks/: mock-raf.ts  use-ref-loop.test.tsx
scripts/: bind-eventarc-invoke.sh  bind-image-read.sh  bind-registry-push.sh  bind-schedule-invoke.sh  bind-secret-access-for-sa.sh  bind-secret-access.sh  create-cloud-tasks.sh  create-workload-identity.sh  update-eventarc-trigger.sh
