[project]
name = "genai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cloudevents>=1.11.0",
    "fastapi>=0.115.6",
    "feedparser>=6.0.11",
    "firebase-admin>=6.6.0",
    "google-auth>=2.38.0",
    "google-cloud-aiplatform>=1.76.0",
    "google-cloud-firestore>=2.20.0",
    "google-cloud-storage>=2.19.0",
    "google-cloud-tasks>=2.18.0",
    "google-cloud-texttospeech>=2.24.0",
    "google-generativeai>=0.8.3",
    "helium>=5.1.0",
    "litellm>=1.60.0",
    "lmnr[all]>=0.4.55",
    "pillow>=11.1.0",
    "pydantic>=2.10.5",
    "ratelimit>=2.2.1",
    "sickle>=0.7.0",
    "smolagents[litellm]>=1.7.0",
    "tenacity>=9.0.0",
    "types-protobuf>=5.29.1.20250208",
    "uvicorn>=0.34.0",
    "weave>=0.51.31",
]

[dependency-groups]
dev = [
    "mock-firestore",
    "pydantic-to-typescript>=2",
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.2",
    "ruff>=0.9.1",
    "tokencost>=0.1.17",
]


[tool.ruff]
exclude = ["dist", ".venv"]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501", # line too long, handled by black
    "B008", # do not perform function calls in argument defaults
    "C901", # too complex
    "W191", # indentation contains tabs
]

[tool.ruff.lint.isort]
known-third-party = []

[tool.ruff.lint.pyupgrade]
# Preserve types, even if a file imports `from __future__ import annotations`.
keep-runtime-typing = true

[tool.pytest]
norecursedirs = [".venv", "src/swarm/examples/*"]

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"  # "class", "module", "package", "session"

[tool.uv.sources]
mock-firestore = { git = "https://github.com/hironow/python-mock-firestore.git" }
litellm = { git = "https://github.com/BerriAI/litellm.git", rev = "main" }
